css/main-LTR.css
/* ... */
.services-boxed .service-text {
  font-size: 1.1rem;
  line-height: 1.5;
  margin: 0;
  opacity: 0.85;
}
@media (max-width: 991px) {
  .lifted-up-box.services-boxed .services-row {
    padding: 6rem 0;
  }
}
.lifted-up-box.services-boxed .service-box {
  margin-top: -8rem;
}
@media (max-width: 991px) {
  .lifted-up-box.services-boxed .service-box {
    margin-top: 0rem;
  }
}

.no-border {
  border: none !important;
  padding: 2% !important;
  box-shadow: none !important;
}

.services-boxed .services-row {
  margin-bottom: 2rem;
}
.services-boxed .service-box {
  padding: 2rem;
  border-style: solid;
  border-image: linear-gradient(45deg, rgb(192, 40, 185), rgb(245, 51, 63), rgb(255, 164, 0)) 1;
  box-shadow: 0px 0px 10px 0px rgba(var(--clr-dark-blue-rgb), 0.1);
}
.services-boxed .service-box::before {
  content: "";
  border-radius: inherit;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: auto;
  right: 0;
  transform: scaleX(0);
  transform-origin: right;
  background-color: rgba(var(--clr-main-rgb), 1);
  z-index: -3;
  transition: transform 0.5s ease 0s;
}
.services-boxed .service-box.reveal-up::before {
  left: 0;
  top: auto;
  bottom: 0;
  transform: scaleY(0);
  transform-origin: bottom;
}
.services-boxed .service-box.reveal-up:hover::before {
  top: 0;
  bottom: auto;
  transform: scaleY(1);
  transform-origin: top;
}
.services-boxed .service-box.reveal-down::before {
  left: 0;
  top: 0;
  bottom: auto;
  transform: scaleY(0);
  transform-origin: top;
}
.services-boxed .service-box.reveal-down:hover::before {
  top: auto;
  bottom: 0;
  transform: scaleY(1);
  transform-origin: bottom;
}
.services-boxed .service-box.reveal-end::before {
  top: 0;
  left: 0;
  right: auto;
  transform: scaleX(0);
  transform-origin: left;
}
.services-boxed .service-box.reveal-end:hover::before {
  left: auto;
  right: 0;
  transform: scaleX(1);
  transform-origin: right;
}
.services-boxed .service-box.reveal-start::before {
  top: 0;
  left: auto;
  right: 0;
  transform: scaleX(0);
  transform-origin: right;
}
.services-boxed .service-box.reveal-start:hover::before {
  left: 0;
  right: auto;
  transform: scaleX(1);
  transform-origin: left;
}
@media (max-width: 991px) {
  .services-boxed .service-box {
    padding: 2rem;
  }
}
.services-boxed .service-box .read-more {
  color: var(--clr-main);
  border: none;
  padding: 0;
}
.services-boxed .service-box:hover::before {
  left: 0;
  right: auto;
  transform: scaleX(1);
  transform-origin: left;
}
.services-boxed .service-box:hover .service-title,
.services-boxed .service-box:hover .service-text,
.services-boxed .service-box:hover .font-icon,
.services-boxed .service-box:hover .read-more {
  color: var(--clr-white);
}
.services-boxed.has-dark-bg {
  background-color: var(--clr-semi-dark-blue);
}
.services-boxed.has-dark-bg .service-title {
  color: var(--clr-white);
}
.services-boxed.has-dark-bg .service-text {
  color: var(--clr-white);
  opacity: 0.85;
}

.service-single {
  padding: 8rem 0;
}
.service-single .service-sidebar {
  padding-inline-end: 1rem;
  position: sticky;
  top: 7.5rem;
}
.service-single .service-sidebar .sidebar-pane {
  position: relative;
  padding: 2rem;
  margin-bottom: 2rem;
  border-radius: 0.25rem;
  background-color: rgba(var(--clr-main-rgb), 0.75);
  z-index: 0;
}
.service-single .service-sidebar .sidebar-pane .sidebar-title {
  font-size: 1.5rem;
  font-weight: 500;
  margin-bottom: 1.5rem;
  text-transform: capitalize;
}
.service-single .service-sidebar .sidebar-pane .list {
  list-style: none;
  padding: 0;
  margin: 0;
}
.service-single .service-sidebar .sidebar-pane .list-item {
  display: flex;
  align-items: center;
  padding: 1rem 1.25rem;
  padding-right: 0;
  margin-bottom: 1rem;
  background: rgba(var(--clr-dark-blue-rgb), 1);
  color: var(--clr-white);
  opacity: 0.65;
  border-radius: 0.25rem;
  transition: all 0.3s ease-in-out 0s;
}
.service-single .service-sidebar .sidebar-pane .list-item .font-icon {
  color: var(--clr-white);
  font-size: 1.5rem;
  margin-right: 0.75rem;
  line-height: 1;
}
.service-single .service-sidebar .sidebar-pane .list-item a {
  position: relative;
  text-transform: capitalize;
  width: 100%;
  color: inherit;
  display: flex;
  align-items: center;
  line-height: 1;
  font-size: 1.1rem;
  font-weight: 400;
}
.service-single .service-sidebar .sidebar-pane .list-item a .icon {
  display: flex;
  align-items: center;
  translate: -1rem 0;
  opacity: 0;
  transition: all 0.3s ease-in-out 0s;
}
.service-single .service-sidebar .sidebar-pane .list-item:hover, .service-single .service-sidebar .sidebar-pane .list-item.active {
  opacity: 1;
}
.service-single .service-sidebar .sidebar-pane .list-item:hover a .icon, .service-single .service-sidebar .sidebar-pane .list-item.active a .icon {
  translate: 1rem 0;
  opacity: 1;
}
.service-single .service-sidebar .sidebar-pane .sc-list .sc-item {
  color: var(--clr-white);
  background-color: var(--clr-dark-blue);
  opacity: 0.75;
}
.service-single .service-sidebar .sidebar-pane .sc-list .sc-item .sc-link {
  color: inherit;
}
.service-single .service-sidebar .sidebar-pane .sc-list .sc-item .sc-icon {
  color: inherit;
}
.service-single .service-sidebar .sidebar-pane .sc-list .sc-item:hover {
  opacity: 1;
}
.service-single .service-content-area {
  margin-bottom: 4rem;
}
.service-single .service-content-area .part {
  margin-bottom: 2.5rem;
}
.service-single .service-content-area .featured-img-area {
  margin-bottom: 2rem;
  border-radius: 0.25rem;
  overflow: hidden;
}
.service-single .service-content-area .service-title {
  text-transform: capitalize;
  font-size: 2rem;
  font-weight: 600;
  margin-bottom: 1.75rem;
}
.service-single .service-content-area .service-text {
  margin-bottom: 2rem;
  font-size: 1.25rem;
  opacity: 0.75;
}
.service-single .service-content-area .two-cols-img {
  margin-bottom: 2rem;
}
/* ... */

